Fixed Nav bar search alignment

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -6686,13 +6686,13 @@ form#MassAssign_SecurityGroups {
     padding: 10px 10px 10px 10px;
     background-image: none, url("../../../../themes/SuiteP/images/p_search_button.svg"), url("../../../../themes/SuiteP/images/p_search_button.png");
     background-repeat: no-repeat;
-    background-position: 13px 10px;
+    background-position: 14px 8px;
     text-indent: -9999px;
     overflow: hidden;
 }
 
 #searchform button:hover {
-    background-position: 13px -44px;
+    background-position: 14px -46px;
     background-color: #829EB5;
 }
 
@@ -9034,7 +9034,7 @@ div.list-view-rounded-corners > table th:last-of-type {
         border: none;
         background-image: none, url("../../../../themes/SuiteP/images/p_search_button.svg"), url("../../../../themes/SuiteP/images/p_search_button.png");
         background-repeat: no-repeat;
-        background-position: 0px -44px;
+        background-position: 0px -46px;
         text-indent: -9999px;
         overflow: hidden;
         padding: 12px 0px 12px 0px;
@@ -9042,12 +9042,12 @@ div.list-view-rounded-corners > table th:last-of-type {
     }
 
     #search.open #searchbutton {
-        background-position: 0px -44px;
+        background-position: 0px -46px;
         background-color: transparent;
     }
 
     #searchbutton:hover {
-        background-position: 0px 10px;
+        background-position: 0px 8px;
         background-color: transparent;
     }
 
